Add teachers' creation (#14)
* fix endpoints paths

* move middleware

* add teachers creating

big commit splitted into multiple meaningless commits
... and squashed back
